--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -73,8 +73,8 @@
                 android:layout_marginTop="-10dp"
                 android:layout_marginRight="@dimen/_11sdp"
                 android:layout_marginBottom="@dimen/_11sdp"
-                app:cardCornerRadius="@dimen/_10sdp"
-                app:cardBackgroundColor="@color/white">
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -129,8 +129,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_11sdp"
                 android:layout_marginRight="@dimen/_11sdp"
-                app:cardCornerRadius="@dimen/_10sdp"
-                app:cardBackgroundColor="@color/white">
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -161,18 +161,14 @@
 
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/amountTIL"
-                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                style="@style/TextInputLayout.OutlinedBox"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="Amount"
-                                android:textColorHint="@color/primary_black"
-                                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                                app:boxCornerRadiusTopStart="@dimen/_10sdp"
-                                app:boxStrokeColor="@color/primary_color"
-                                app:expandedHintEnabled="false"
-                                app:hintTextColor="@color/black"
+                                android:textColorHint="@color/light_gray"
+                                app:boxStrokeColor="@color/primary_green"
+                                app:errorIconDrawable="@null"
+                                app:hintTextColor="@color/primary_green"
                                 app:prefixText="$"
                                 app:prefixTextColor="@color/black">
 
@@ -180,14 +176,10 @@
                                     android:id="@+id/amountET"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:clickable="false"
-                                    android:cursorVisible="false"
-                                    android:enabled="false"
-                                    android:focusable="false"
                                     android:fontFamily="@font/opensans_semibold"
-                                    android:inputType="text"
+                                    android:inputType="number"
+                                    android:maxLength="7"
                                     android:padding="@dimen/_12sdp"
-                                    android:text=""
                                     android:textColor="@color/text_color"
                                     android:textSize="@dimen/_12ssp" />
 
@@ -196,6 +188,30 @@
 
                     </RelativeLayout>
 
+                    <LinearLayout
+                        android:id="@+id/amountErrorLL"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <ImageView
+                            android:layout_width="@dimen/_12sdp"
+                            android:layout_height="@dimen/_12sdp"
+                            android:src="@drawable/ic_erro" />
+
+                        <TextView
+                            android:id="@+id/amountErrorTV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:textColor="@color/error_red"
+                            android:textSize="@dimen/_10ssp" />
+                    </LinearLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/firstNameTIL"
                         style="@style/TextInputLayout.OutlinedBox"
@@ -203,10 +219,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
                         android:hint="First Name"
-                        android:textColorHint="@color/black"
+                        android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
-                        app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -215,7 +230,6 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="First Name"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
                             android:maxLength="30"
@@ -262,10 +276,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
                         android:hint="Last Name"
-                        android:textColorHint="@color/black"
+                        android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
-                        app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -274,7 +287,6 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="Last Name"
                             android:imeOptions="actionNext"
                             android:inputType="text|textNoSuggestions"
                             android:maxLength="30"
@@ -320,11 +332,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
                         android:hint="Email"
-                        android:textColorHint="@color/black"
+                        android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
                         app:errorTextColor="@color/error_red"
-                        app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -333,7 +344,6 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="Email"
                             android:imeOptions="actionNext"
                             android:importantForAutofill="no"
                             android:inputType="textEmailAddress|textNoSuggestions"
@@ -379,7 +389,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/nextCV"
+                android:id="@+id/purchaseCV"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/_20sdp"
@@ -391,7 +401,6 @@
                 app:cardCornerRadius="@dimen/_20sdp">
 
                 <TextView
-                    android:id="@+id/home"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
