--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -212,7 +212,8 @@
                             android:paddingBottom="@dimen/_7sdp"
                             android:text="$"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/_40ssp" />
+                            android:textSize="@dimen/_40ssp"
+                            android:visibility="gone" />
 
                         <LinearLayout
                             android:id="@+id/lyAmount"
@@ -245,7 +246,7 @@
                                 android:text="CYN"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp"
-                                android:visibility="gone"></TextView>
+                                android:visibility="visible"></TextView>
                         </LinearLayout>
 
                         <View
@@ -275,11 +276,40 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
                         android:text="Amount entered exceeds your daily limit"
                         android:textColor="@color/error"
                         android:textSize="@dimen/_10ssp"
                         android:visibility="invisible"></TextView>
+
+                    <LinearLayout
+                        android:id="@+id/lyBalance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text="Available Balance: "
+                            android:textColor="@color/balance"
+                            android:textSize="@dimen/_9ssp"></TextView>
+
+                        <TextView
+                            android:id="@+id/tvAvailableBal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_bold"
+                            android:text="9,999.00CYN"
+                            android:textColor="@color/balance"
+                            android:textSize="@dimen/_12ssp"></TextView>
+
+                    </LinearLayout>
 
                     <View
                         android:layout_width="match_parent"
