--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -157,7 +157,7 @@
                                 android:layout_centerInParent="true"
                                 android:layout_marginEnd="@dimen/_15sdp"
                                 android:src="@drawable/ic_down"
-                                android:visibility="visible" />
+                                android:visibility="gone" />
 
                             <com.google.android.material.textfield.TextInputLayout
                                 android:id="@+id/amountTIL"
@@ -179,8 +179,10 @@
                                     android:fontFamily="@font/opensans_semibold"
                                     android:inputType="number"
                                     android:maxLength="7"
-                                    android:padding="@dimen/_12sdp"
+                                    android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
+                                    android:textColorHint="@color/light_gray"
+                                    android:textCursorDrawable="@drawable/cursor_color"
                                     android:textSize="@dimen/_12ssp" />
 
                             </com.google.android.material.textfield.TextInputLayout>
@@ -344,7 +346,7 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                             android:fontFamily="@font/opensans_semibold"
-                            android:imeOptions="actionNext"
+                            android:imeOptions="actionDone"
                             android:importantForAutofill="no"
                             android:inputType="textEmailAddress|textNoSuggestions"
                             android:maxLines="1"
@@ -388,27 +390,26 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/purchaseCV"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/_44sdp"
                 android:layout_marginLeft="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_43sdp"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:layout_marginBottom="@dimen/_28sdp"
-                android:gravity="center"
                 app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="@dimen/_20sdp">
+                app:cardCornerRadius="@dimen/_22sdp">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
-                    android:gravity="center"
                     android:text="Purchase"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
+                    android:textSize="@dimen/text_size_13sp" />
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
