--- a/app/src/main/res/layout/activity_gift_card.xml
+++ b/app/src/main/res/layout/activity_gift_card.xml
@@ -90,47 +90,48 @@
         android:orientation="vertical"
         android:visibility="visible">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_17sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="Brands"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12ssp" />
+
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="match_parent">
 
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginStart="@dimen/_11sdp"-->
-<!--                android:layout_marginTop="@dimen/_17sdp"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:text="Brands"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:textSize="@dimen/_12ssp" />-->
 
-            <GridView
-                android:id="@+id/brandsGV"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:horizontalSpacing="@dimen/_10sdp"
-                android:numColumns="2"
-                android:padding="@dimen/_10sdp"
-                android:verticalSpacing="@dimen/_10sdp"
-                />
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical">-->
+                android:layout_margin="@dimen/_10sdp"
+                android:background="@drawable/fullradius_list_items"
+                android:orientation="vertical">
 
-<!--                -->
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_margin="@dimen/_10sdp">-->
+                <!--                <com.greenbox.coyni.utils.ExpandableHeightGridView-->
+                <!--                    android:id="@+id/brandsGV"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:fitsSystemWindows="true"-->
+                <!--                    android:horizontalSpacing="@dimen/_10sdp"-->
+                <!--                    android:numColumns="2"-->
+                <!--                    android:padding="@dimen/_10sdp"-->
+                <!--                    android:verticalSpacing="@dimen/_10sdp"-->
+                <!--                    android:stretchMode="columnWidth"-->
+                <!--                    android:isScrollContainer="false"/>-->
 
-<!--                    -->
+                <com.greenbox.coyni.utils.ExpandableHeightRecyclerView
+                    android:id="@+id/brandsGV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_5sdp"/>
 
-<!--                </LinearLayout>-->
-
-<!--            </LinearLayout>-->
+            </RelativeLayout>
 
         </ScrollView>
 
