--- a/app/src/main/res/layout/buy_token_transaction_failed.xml
+++ b/app/src/main/res/layout/buy_token_transaction_failed.xml
@@ -32,7 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvHead"
-        android:layout_margin="@dimen/_21sdp"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_21sdp"
         android:fontFamily="@font/opensans_regular"
         android:gravity="center"
         android:text="The transaction failed due to error \ncode: {error code - error code \ndescription}. Please try again."
