--- a/app/src/main/res/layout/giftcard_item.xml
+++ b/app/src/main/res/layout/giftcard_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tool="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="@dimen/_5sdp">
 
     <ImageView
         android:id="@+id/imgBrand"
