--- a/app/src/main/res/layout/posted_inner_item.xml
+++ b/app/src/main/res/layout/posted_inner_item.xml
@@ -24,13 +24,18 @@
 
             <TextView
                 android:id="@+id/messageTV"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
-                android:singleLine="true"
+                android:layout_weight=".65"
                 android:textColor="@color/primary_black"
                 android:visibility="visible"
-                android:textSize="@dimen/_11ssp" />
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:text="Buy Tokens from Card "
+                android:textSize="@dimen/_11ssp"
+                />
 
             <TextView
                 android:id="@+id/messagTV"
@@ -38,8 +43,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
                 android:singleLine="true"
-                android:textDirection="ltr"
                 android:layout_weight=".3"
+                android:gravity="start"
                 android:text=" **1234"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp"
@@ -48,7 +53,7 @@
 
             <TextView
                 android:id="@+id/amountTV"
-                android:layout_width="@dimen/_100sdp"
+                android:layout_width="@dimen/_80sdp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:fontFamily="@font/opensans_bold"
